--- a/intro_v00.Rmd
+++ b/intro_v00.Rmd
@@ -71,5 +71,7 @@ What is the interest of my simplistic model ? Nothing but help us ask ourselves 
 I would finish by this metaphor of Henri Laborit: *To go to the moon we need to know the laws of gravitation. When one know these laws, this does not mean that one is freed from the laws of gravity, but it means they can be used for doing something else.*
 
 
+To finish, let me quote [Henri Laborit](http://en.wikipedia.org/wiki/Mon_oncle_dAm%C3%A9rique): *To go to the moon we need to know the laws of gravitation. Knowing them does not make us free from  gravity, but it allows to use them for doing something else.*
+
 
 
